# projects

./: README.md
CPP_Projects/: README.de.md  README.md
CPP_Projects/PAD1_SS2014_Malcherek_Lagerverwaltung/: CMakeLists.txt  Material.cpp  Material.h  README.de.md  README.md  Warehouse.cpp  Warehouse.h  const.cpp  main.cpp
CPP_Projects/PAD1_SS2021_Malcherek_P2_Tilgungsplan/: CMakeLists.txt  README.de.md  README.md  main.cpp
CPP_Projects/PAD1_WS1819_Malcherek_Transportunternehmen/: CMakeLists.txt  Fahrt.cpp  Fahrt.h  Fahrtenbuch.cpp  Fahrtenbuch.h  README.de.md  README.md  Schiff.cpp  Schiff.h  main.cpp
CPP_Projects/PG1_WS2223_Jung_20230216_Ponyhof/: README.de.md  README.md  islandpferd.cpp  islandpferd.h  main.cpp  pony.cpp  pony.h  ponyhof.cpp  ponyhof.h  shetlandpony.cpp  shetlandpony.h  stall.cpp  stall.h
login-management-system/: README.md  architecture.puml  composer.json  database.sql
login-management-system/app/App/: Router.php  View.php
login-management-system/app/Config/: Database.php
login-management-system/app/Controller/: HomeController.php  UserController.php
login-management-system/app/Domain/: Session.php  User.php
login-management-system/app/Exception/: ValidationException.php
login-management-system/app/Middleware/: Middleware.php  MustLoginMiddleware.php  MustNotLoginMiddleware.php
login-management-system/app/Model/: UserLoginRequest.php  UserLoginResponse.php  UserPasswordUpdateRequest.php  UserPasswordUpdateResponse.php  (+6 more)
login-management-system/config/: database.php
login-management-system/public/: index.php
(+20 files in other folders)
